--- a/layout.html
+++ b/layout.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ page_title }}</title>
-  <link rel="stylesheet" href="foundation.css" />
-  <link rel="stylesheet" href="tablet-and-desktop.css" />
+  <link rel="stylesheet" href="theme.scss" />
+  <link rel="stylesheet" href="tablet-and-desktop.scss" />
   {% comment %}Remove this stylesheet before using this theme{% endcomment %}<link href="//cdn.symbolset.com/5691ecb2e617628aefd8f9eb233dd6a126d55857/symbolset.css" rel="stylesheet">
   <script src="modernizr.js"></script>
 
